<resources>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_tryagain">Try again</string>
    <string name="common_login">Log in</string>
    <string name="common_refresh">Refresh</string>
    <string name="common_continue">Continue</string>
    <string name="common_skip">Skip</string>
    <string name="app_name">Fingify</string>
    <string name="activity_applications_title">Fingify</string>
    <string name="activity_applications_action_newapplication">Add new account</string>
    <string name="activity_applications_action_settings">Settings</string>
    <string name="activity_applications_tab_accounts">Accounts</string>
    <string name="activity_applications_tab_requests">Coderequests</string>
    <string name="activity_preferences_title">Settings</string>
    <string name="activity_preferences_headers_account">Fingify account</string>
    <string name="activity_preferences_headers_app">App settings</string>
    <string name="activity_preferences_headers_export">Export all applications</string>
    <string name="activity_preferences_headers_export_sub">Export all applications to a new device</string>
    <string name="activity_preferences_headers_about">About app</string>
    <string name="activity_verifycoderequest_noapplication">No account given!</string>
    <string name="fragment_applications_context_title">selected</string>
    <string name="fragment_applications_context_delete">Delete</string>
    <string name="fragment_applications_context_edit">Edit</string>
    <string name="fragment_applications_context_edit_error_nomultiple">You can only edit one account at a time</string>
    <string name="fragment_applications_empty">No accounts yet! Get started and create a new one!</string>
    <string name="fragment_requests_empty">No coderequests found</string>
    <string name="fragment_requests_list_item_thisdevice">This device</string>
    <string name="fragment_requests_list_item_otherdevice">Other device</string>
    <string name="fragment_requests_list_item_button_reject">Reject</string>
    <string name="fragment_requests_list_item_button_accept">Accept</string>
    <string name="fragment_requests_login_required">You need to be logged in \nto use this feature</string>
    <string name="fragment_verifycoderequest_requesttext">A website asks permission to get the current code for</string>
    <string name="fragment_exportapplications_startdesc">Click \'Next\' to show a QR-code to scan on your new device. When you added the account, please enter the current code for validation to continue</string>
    <string name="fragment_exportapplications_codedesc_before">Scan the following code to import the application "</string>
    <string name="fragment_exportapplications_codedesc_after">"</string>
    <string name="fragment_exportapplications_error_totpcheck">The check code is wrong!</string>
    <string name="fragment_exportapplications_error_writer">QR-code could not be generated, please try again</string>
    <string name="fragment_exportapplications_success">Export succeeded!</string>
    <string name="notification_title">Coderequest</string>
    <string name="dialog_newapplication_text">Enter a name for this account</string>
    <string name="dialog_newapplication_appname_hint">Accountname</string>
    <string name="dialog_newapplication_user_text">This account is for user:</string>
    <string name="dialog_newapplication_input_title">Enter account name</string>
    <string name="dialog_newapplication_input_submit">Add account</string>
    <string name="dialog_newapplication_error_notsupported_text">This verification method is not yet supported</string>
    <string name="dialog_newapplication_error_notsupported_title">Not supported</string>
    <string name="dialog_newapplication_error_invalid_text">This code is not valid. Please try again</string>
    <string name="dialog_newapplication_error_invalid_title">Invalid code</string>
    <string name="dialog_newapplication_error_noname">Account name is required</string>
    <string name="dialog_newapplication_error_duplicateLabel">This name already exists. Pick a new one</string>
    <string name="dialog_newapplication_error_duplicateSecret">This account already exists</string>
    <string name="dialog_newapplication_noQRButton">No QR code?</string>
    <string name="dialog_newapplication_code_title">Enter code</string>
    <string name="dialog_newapplication_code_desc">Enter the code provided on the website without spaces</string>
    <string name="dialog_newapplication_code_hint">Code of 32 characters</string>
    <string name="dialog_newapplication_code_required">Code is required!</string>
    <string name="dialog_newapplication_code_length">Code must be 32 characters!</string>
    <string name="dialog_newapplication_title">Scan a QR code</string>
    <string name="dialog_editapplication_title">Edit accountname</string>
    <string name="dialog_editapplication_submit">Edit</string>
    <string name="dialog_removeapplication_title">Are you sure you want to delete this/these account(s)? This cannot be undone</string>
    <string name="dialog_removeapplication_submit">Delete</string>
    <string name="dialog_removeapplication_notice">Account(s) deleted</string>
    <string name="dialog_verifycoderequest_title">Verify code request</string>
    <string name="dialog_login_tabs_userpass">Fingify account</string>
    <string name="dialog_login_tabs_social">Google+</string>
    <string name="dialog_login_userpass_desc">Log in using your username &amp; password</string>
    <string name="dialog_login_userpass_username_hint">Username</string>
    <string name="dialog_login_userpass_password_hint">Password</string>
    <string name="dialog_login_buttons_register">Register</string>
    <string name="dialog_register_title">Register</string>
    <string name="dialog_register_username_hint">Username</string>
    <string name="dialog_register_password_hint">Password</string>
    <string name="dialog_register_password_repeat_hint">Password confirmation</string>
    <string name="dialog_register_email_hint">Email</string>
    <string name="dialog_register_buttons_register">Register</string>
    <string name="fingerprint_authentication_title">Please verify to use the app</string>
    <string name="fingerprint_authentication_not_supported">Fingerprint authentication is not supported on this device</string>
    <string name="fingerprint_authentication_dialog_title">Fingerprint scanner</string>
    <string name="fingerprint_authentication_dialog_message">The app found a fingerprint scanner on your device. Enable fingerprint recognition on app start?</string>
    <string name="fingerprint_authentication_dialog_enable_button">Enable</string>
    <string name="fingerprint_authentication_dialog_cancel_button">Cancel</string>
    <string name="fingerprint_authentication_failed">Fingerprint authentication failed</string>
    <string name="fingerprint_authentication_failed_tryagain">Fingerprint authentication failed. Please try again</string>
    <string name="settings_app_titles_protection">Protection</string>
    <string name="settings_app_titles_notifications">Notifications</string>
    <string name="settings_app_fingerprint_authentication_title">Use fingerprint scanner</string>
    <string name="settings_app_fingerprint_authentication_summary">Use the fingerprint scanner to authenticate the user</string>
    <string name="settings_app_notification_title">Notifications for coderequests</string>
    <string name="settings_app_notification_summary">Create a notification when receiving a coderequest</string>
    <string name="settings_app_notification_popup_options_setting_title">Notification popup</string>
    <string-array name="settings_app_notification_popup_options_descs">
        <item>No popups</item>
        <item>Only when screen is off</item>
        <item>Always</item>
    </string-array>
    <string-array name="settings_app_notification_popup_options_vals">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="settings_account_myaccount_title">My account</string>
    <string name="settings_account_myaccount_summary_loggedin">Logged in as</string>
    <string name="settings_account_myaccount_summary_notloggedin">Not logged in</string>
    <string name="settings_account_login_title">Log in</string>
    <string name="settings_account_login_summary_loggedin">Log in as other user</string>
    <string name="settings_account_login_summary_notloggedin">Log in to use all available features in the app</string>
    <string name="settings_about_app_desc">An app for 2FA using fingerprint protection</string>
    <string name="database_applications_save_error">Could not save account(s)</string>
    <string name="database_applications_load_error">Could not load account(s)</string>
    <string name="database_applications_secrets_nocheck">Could not check for existing secrets</string>
    <string name="database_applications_labels_nocheck">Could not check for existing labels</string>
    <string name="database_applications_remove_error">Could not remove account(s)</string>
    <string name="database_requests_load_error">Could not load coderequest(s)</string>
    <string name="database_requests_save_error">Could not save coderequest(s)</string>
    <string name="database_requests_remove_error">Could not remove coderequest(s)</string>
    <string name="account_initialize_breaking_change">Breaking changes in the app require you to login again</string>
    <string name="account_general_notloggedin">Not logged in!</string>
    <string name="account_login_wrongtab">Choose Fingify account tab first</string>
    <string name="account_login_usernamerequired">Username is required!</string>
    <string name="account_login_passwordrequired">Password is required!</string>
    <string name="account_login_unauthorized">Invalid credentials</string>
    <string name="account_login_error_login">Error during login</string>
    <string name="account_login_progress_tile">Logging in</string>
    <string name="account_login_progress_desc">Please wait...</string>
    <string name="account_logout_error">Error during logout</string>
    <string name="account_registration_username_required">Username is required!</string>
    <string name="account_registration_password_required">Password is required!</string>
    <string name="account_registration_passwords_equal">Passwords should be the same!</string>
    <string name="account_registration_conflict">This username or email already exists</string>
    <string name="account_registration_error">Error during registration</string>
    <string name="account_registration_progress_title">Registering</string>
    <string name="account_registration_progress_desc">Please wait...</string>
    <string name="account_gcmreg_error">Could not enable push messages</string>
    <string name="account_gcmreg_playservices">Google Play Services not accessible</string>
    <string name="account_migration_error">Could not migrate account</string>
    <string name="account_migration_error_detail">Could not migrate account to the new app version</string>
    <string name="account_migration_progress_title">Migrating account</string>
    <string name="account_migration_progress_desc">Migrating account to new app version...</string>
    <string name="account_migration_error_relogin">Migration failed, please login again</string>
    <string name="applications_error">Error while processing</string>
    <string name="application_duplicate">Application already exists!</string>
    <string name="requests_notfound">Request doesn\'t exist (anymore)</string>
    <string name="requests_error">Error during response</string>
    <string name="requests_already_done">Coderequest already answered!</string>
    <string name="requests_application_not_exists">Account does not exist (anymore)!</string>
</resources>