<?xml version="1.0" encoding="utf-8"?>

<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
    <header
        android:title="@string/activity_preferences_headers_account"
        android:fragment="com.fwest98.fingify.Fragments.AccountPreferencesFragment"/>

    <header
        android:fragment="com.fwest98.fingify.Fragments.AppPreferencesFragment"
        android:title="@string/activity_preferences_headers_app" />

    <header
        android:fragment="com.fwest98.fingify.Fragments.ExportApplicationsFragment"
        android:title="@string/activity_preferences_headers_export"
        android:summary="@string/activity_preferences_headers_export_sub"/>

    <header
        android:fragment="com.fwest98.fingify.Fragments.AboutLibsFragment"
        android:title="@string/activity_preferences_headers_about"/>

</preference-headers>