<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:textSize="17sp"
        android:id="@+id/dialog_newapplication_user"
        android:text="@string/dialog_newapplication_user_text"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textSize="17sp"
        android:text="@string/dialog_newapplication_text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:hint="@string/dialog_newapplication_appname_hint"
        android:singleLine="true"
        android:id="@+id/dialog_newapplication_name"/>

</LinearLayout>